# reagent

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DECISION_STACK_MASTER_DOC.md  DECISION_STACK_MASTER_DOC_v2.md  DECISION_STACK_MASTER_DOC_v2_part2.md  DS_PROGRESS.md  EXECUTION_PLAN.md  Makefile  PLAN.md  README.md  SECURITY.md  add_client_api.py  add_llm.py  decision-stack.bundle  docker-compose.yml  intelligence_layer_summary.md  phase2_execution_plan.md  phases_5_9_12_summary.md  plan.md  rewrite_beginner.py  setup_repo.py  summary_ingestion_classification.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  invariant_violation.md
.github/workflows/: ci.yml
classification/: Dockerfile  Dockerfile.dev  Makefile  go.mod  go.sum
classification/docs/: ARCHITECTURE.md
classification/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
client/: App.tsx  Dockerfile  app.json  babel.config.js  metro.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client-backup/: app.json  eas.json  index.html  metro.config.js  package.json  tailwind.config.js
client-backup/docs/: ARCHITECTURE.md
client-backup/src/: App.tsx
client/src/: App.tsx  declarations.d.ts
decision-stack-edited-files/: DEPLOYMENT.md  FILES_EDITED.md
decision-stack-edited-files/client/: package.json
docs/archive/: DECISION_STACK_MASTER_DOC_v2_part1.md  DECISION_STACK_MASTER_DOC_v2_part3.md  INFRASTRUCTURE_SUMMARY.md  MASTER_SECTION_3_4.md  MASTER_SECTION_7_8.md  audit_report.md  phase1_mental_model.md  review_plan.md  summary_client_sync.md
docs/design/: sync-broadcast-delivery.md
docs/operations/: FEATURE_MATRIX.md  MASTER_STATE.md  REPO_GUIDE.md  master-state.md  product-vision.md
infra/docker/: .env.example  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
infra/ecs-task-defs/: calendar.json.tpl  classification.json.tpl  ingestion.json.tpl  intelligence.json.tpl  ocr.json.tpl  stt.json.tpl  sync.json.tpl  tts.json.tpl
infra/terraform/: MIGRATION_QDRANT_NEO4J_MANAGED.md  README.md  main.tf  outputs.tf  variables.tf
ingestion/: Dockerfile  Dockerfile.dev  Makefile  README.md  codebase_snapshot.md  go.mod  go.sum  scrape_repo.ps1
ingestion/docs/: ARCHITECTURE.md
ingestion/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_indexes.down.sql  002_add_indexes.up.sql  003_add_backfill_columns.down.sql  003_add_backfill_columns.up.sql  004_partition_raw_emails.down.sql  004_partition_raw_emails.up.sql  004_partition_raw_emails_data.sql
intelligence/: Dockerfile  __init__.py  alembic.ini  main.py  requirements.txt
intelligence-backup/: Dockerfile  Dockerfile.dev  Makefile  alembic.ini  main.py  pyproject.toml
intelligence-backup/alembic/: env.py
intelligence-backup/app/: auth.py
intelligence-backup/app/agent/: orchestrator.py
intelligence-backup/app/calendar_context/: ner.py  service.py
intelligence-backup/app/chat/: models.py  router.py  service.py  session.py
intelligence-backup/app/compression/: service.py  store.py  summary_cache.py
intelligence-backup/app/decision_stack/: service.py
intelligence-backup/app/drafting/: intent_parser.py  service.py  spawn.py  threading.py
intelligence-backup/app/email_kb/: service.py
intelligence-backup/app/profile/: service.py
intelligence-backup/core/: config.py  metering.py  neo4j_schema.cypher  openai_client.py
intelligence-backup/core/prompt_templates/: __init__.py  compression.jinja2
intelligence-backup/docs/: ARCHITECTURE.md
intelligence-backup/infra/db/: neo4j_client.py
intelligence-backup/stubs/openai/: __init__.py
intelligence-backup/stubs/pydantic_settings/: __init__.py
intelligence-backup/tests/: test_fallback_chain.py  test_metering.py  test_schema_init.py
intelligence/alembic/: env.py
intelligence/app/: db.py  models.py  nats_consumer.py
reviews/: code_review_critical.md  feature_gaps_analysis.md  llm_strategy_review.md  scalability_review.md  track01_cross_context.md  track02_schema_consistency.md  track03_invariant_audit.md  track04_spec_compliance.md  track05_security_audit.md  track06_error_handling.md  track07_test_coverage.md  track08_client_architecture.md  track09_infrastructure.md  track10_data_flow.md  track11_trust_gradient.md  track12_failure_cascades.md  track13_api_spec.md  track14_code_quality.md  track15_service_integration.md  track16_voice_chat_e2e.md  track17_documentation.md
scripts/: verify_migrations.py
services/calendar/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/calendar/app/: __init__.py  circuit_breaker.py  conflict.py  google.py  main.py  models.py  outlook.py  router.py  sync.py
services/calendar/core/: __init__.py  config.py  db.py  logging_config.py
services/calendar/tests/: __init__.py  test_calendar.py  test_worker.py
services/calendar/worker/: __init__.py  briefing.py  conflict_alert.py  digest.py  main.py  models.py  notifier.py  scanner.py
services/ocr/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ocr/app/: __init__.py  engine.py  health.py  image.py  main.py  models.py  pdf.py  router.py
services/ocr/core/: __init__.py  config.py  logging_config.py
services/ocr/tests/: __init__.py  test_engine.py  test_main.py
services/stt/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/stt/app/: __init__.py  circuit_breaker.py  deepgram_client.py  main.py  models.py  router.py  stream_handler.py
services/stt/core/: __init__.py  config.py  logging_config.py
services/stt/tests/: __init__.py  test_stt.py
services/tts/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/tts/app/: __init__.py  cache.py  circuit_breaker.py  elevenlabs_client.py  main.py  router.py  stream_handler.py
services/tts/core/: __init__.py  config.py  logging_config.py
services/tts/tests/: __init__.py  test_tts.py
shared/logutil/: go.mod  (+3 more)
sync/: .air.toml  Dockerfile  Dockerfile.dev  Makefile  go.mod  go.sum
tests/: test_llm_integration.py
(+541 files in other folders)
