[tool.poetry]
name = "decisionstack-intelligence"
version = "0.1.0"
description = "Intelligence Layer bounded context — consumes intelligence.compress events and produces decision cards."
authors = ["Decision Stack Team <team@decisionstack.io>"]
readme = "README.md"
packages = [{ include = "intelligence" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }
neo4j = "^5.26.0"
qdrant-client = "^1.12.0"
nats-py = "^2.9.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.21.0"
httpx = "^0.27.0"
python-multipart = "^0.0.12"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["intelligence"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["intelligence/tests"]
pythonpath = ["." ]
